--- a/src/components/HeroSection/index.module.scss
+++ b/src/components/HeroSection/index.module.scss
@@ -16,7 +16,8 @@
 }
 
 .heroSection {
-    height: calc(100vh - 76px);
+    height: auto;
+    // height: calc(100vh - 76px);
     // height: calc(100dvh - 76px);
     position: relative;
     
