--- a/src/components/HeroSection/index.module.scss
+++ b/src/components/HeroSection/index.module.scss
@@ -2,7 +2,7 @@
 
 .heroSectionWrapper {
     position: relative;
-    padding-top: 76px;
+    // padding-top: 76px;
 
     // @include lg() {
     //     padding-top: px;
@@ -15,32 +15,32 @@
     margin-top: 60px;
 }
 
-.heroSection {
-    height: auto;
-    // height: calc(100vh - 76px);
-    // height: calc(100dvh - 76px);
-    position: relative;
-    
+// .heroSection {
+//     height: 100%;
+//     // height: calc(100vh - 76px);
+//     // height: calc(100dvh - 76px);
+//     position: relative;
 
-    @include md() {
-        // height: unset;
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: flex-start;
-        justify-content: flex-end;
-        padding-top: 100px;
-        padding-bottom: 120px;
-    }
 
-    @media screen and (max-width: 800px) {
-        padding-top: 0;
-    }
+//     @include md() {
+//         // height: unset;
+//         display: flex;
+//         flex-direction: column-reverse;
+//         align-items: flex-start;
+//         justify-content: flex-end;
+//         padding-top: 100px;
+//         padding-bottom: 120px;
+//     }
 
-    @include sm() {
-        padding-bottom: 0;
-    }
+//     @media screen and (max-width: 800px) {
+//         padding-top: 0;
+//     }
 
-}
+//     @include sm() {
+//         padding-bottom: 0;
+//     }
+
+// }
 
 .heroAnimationWrapper {
     display: flex;
@@ -106,7 +106,7 @@
     @include xl() {
         // right: 10vw;
     }
-    
+
     @include lg() {
         right: 8vw;
     }
@@ -167,7 +167,8 @@
 
         font-size: 18px;
         font-weight: 700;
-        line-height: 27px; /* 150% */
+        line-height: 27px;
+        /* 150% */
         letter-spacing: 1.5px;
         cursor: pointer;
     }
@@ -204,7 +205,7 @@
     // z-index: -1;
 }
 
-.decoRing1 {    
+.decoRing1 {
     position: absolute;
     top: -8%;
     right: 2%;
@@ -320,5 +321,466 @@
     @include xs() {
         width: 52%;
         bottom: 28%;
+    }
+}
+
+// 定義變數 (保留你提供的斷點)
+$breakpoints: ('jumbo': 1600px,
+    'xxl': 1440px,
+    'xl': 1280px,
+    'lg': 1025px,
+    'l': 992px,
+    'md': 768px,
+    'sm': 576px,
+    'xs': 414px);
+
+.hero-section {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+
+    &-container {
+        // 替換 poa-center: 絕對居中
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 3;
+        top: 53%;
+        width: 80%;
+        height: auto;
+        margin: auto;
+
+        // 替換 d-flex(center, center)
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        @media (max-width: 1024.98px) {
+            // lg
+            flex-direction: column-reverse;
+            top: 50%;
+        }
+
+        @media (max-width: 575.98px) {
+            // sm
+            top: 52%;
+            width: 100%;
+            padding: 0px 20px;
+        }
+    }
+
+    .phone-area {
+        position: relative;
+        width: 100%;
+        max-width: 800px;
+        height: 700px;
+
+        @media (max-width: 991.98px) {
+            // l
+            height: 550px;
+        }
+
+        @media (max-width: 575.98px) {
+            // sm
+            height: 430px;
+        }
+
+        @media (max-width: 413.98px) {
+            // xs
+            height: 340px;
+        }
+
+        .phone-left {
+            position: absolute;
+            width: 720px;
+            height: auto;
+            top: 26%;
+            left: -10.5%;
+            animation: moveInLeft 1.2s ease-out forwards;
+
+            @media (max-width: 1599.98px) {
+                // jumbo
+                width: 40vw;
+                left: 6%;
+                top: 32%;
+            }
+
+            @media (max-width: 1024.98px) {
+                // lg
+                width: 75vw;
+                left: -15%;
+                top: 40%;
+            }
+
+            @media (max-width: 575.98px) {
+                // sm
+                width: 95vw;
+                left: -15%;
+                top: 42%;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        .phone-right {
+            position: absolute;
+            width: 720px;
+            height: auto;
+            top: -1%;
+            right: -11%;
+            animation: moveInRight 1.2s ease-out 1.2s forwards;
+            opacity: 0;
+
+            @media (max-width: 1599.98px) {
+                // jumbo
+                width: 40vw;
+                top: 10%;
+                right: -11%;
+            }
+
+            @media (max-width: 1439.98px) {
+                // xxl
+                right: -12%;
+                top: 12%;
+            }
+
+            @media (max-width: 1024.98px) {
+                // lg
+                width: 75vw;
+                right: -15%;
+            }
+
+            @media (max-width: 991.98px) {
+                // l
+                right: -13%;
+            }
+
+            @media (max-width: 575.98px) {
+                // sm
+                width: 95vw;
+                right: -15%;
+                top: 20%;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+            .phone-right-mobile {
+                display: none;
+
+                @media (max-width: 1024.98px) {
+                    display: block;
+                }
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .phone-right-desk {
+                display: block;
+
+                @media (max-width: 1024.98px) {
+                    display: none;
+                }
+            }
+        }
+
+        .desc-wrap {
+            position: absolute;
+            bottom: 30%;
+            left: -16%;
+
+            @media (max-width: 1599.98px) {
+                left: 1%;
+            }
+
+            @media (max-width: 1024.98px) {
+                top: 13%;
+                left: 10%;
+            }
+
+            @media (max-width: 575.98px) {
+                top: 15%;
+                left: 12%;
+            }
+
+            p {
+                position: relative;
+                font-size: 24px;
+                font-weight: 700;
+                line-height: normal;
+                letter-spacing: 1px;
+                color: #787878;
+
+                @media (max-width: 1599.98px) {
+                    font-size: 20px;
+                }
+
+                // media-between(l, lg)
+                @media (min-width: 992px) and (max-width: 1024.98px) {
+                    font-size: 28px;
+                }
+
+                // media-between(md, l)
+                @media (min-width: 768px) and (max-width: 991.98px) {
+                    font-size: 24px;
+                }
+
+                @media (max-width: 575.98px) {
+                    font-size: 18px;
+                }
+
+                @media (max-width: 413.98px) {
+                    font-size: 16px;
+                }
+            }
+
+            p+p {
+                margin-top: 40px;
+
+                @media (max-width: 1599.98px) {
+                    margin-top: 20px;
+                }
+
+                @media (max-width: 991.98px) {
+                    margin-top: 15px;
+                }
+
+                @media (max-width: 575.98px) {
+                    margin-top: 10px;
+                }
+            }
+
+            .descA {
+                opacity: 0;
+                left: -15%;
+                animation: moveInA 1s ease-out 2.4s forwards;
+            }
+
+            .descB {
+                opacity: 0;
+                left: 0;
+                animation: moveInA 1s ease-out 3.2s forwards;
+            }
+
+            .descC {
+                opacity: 0;
+                left: 15%;
+                animation: moveInA 1s ease-out 4s forwards;
+            }
+        }
+    }
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 15px;
+        width: 100%;
+        max-width: 430px;
+        padding-right: 0;
+
+        @media (max-width: 1439.98px) {
+            max-width: 390px;
+        }
+
+        @media (max-width: 1024.98px) {
+            align-items: center;
+            max-width: 100%;
+            gap: 5px;
+        }
+
+        .title {
+            font-size: 50px;
+            font-weight: bolder;
+
+            @media (max-width: 1599.98px) {
+                font-size: 42px;
+            }
+
+            @media (max-width: 1439.98px) {
+                font-size: 36px;
+            }
+
+            @media (min-width: 992px) and (max-width: 1024.98px) {
+                font-size: 50px;
+            }
+
+            @media (max-width: 767.98px) {
+                font-size: 32px;
+            }
+        }
+
+        .subtitle {
+            color: var(--sec, #5C5C5C);
+            font-family: "Noto Sans TC";
+            font-size: 32px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 44px;
+            /* 137.5% */
+            letter-spacing: 1px;
+
+            @media (max-width: 1599.98px) {
+                font-size: 28px;
+            }
+
+            @media (max-width: 1024.98px) {
+                text-align: center;
+            }
+
+            @media (min-width: 992px) and (max-width: 1024.98px) {
+                font-size: 32px;
+            }
+        }
+
+        .btn {
+            display: none;
+            text-decoration: none;
+            background: #29A86F; // 假設主色
+            padding: 10px 30px;
+            border-radius: 100px;
+            text-align: center;
+            color: #fff;
+            font-size: 18px;
+            font-weight: 700;
+            margin-top: 20px;
+
+            @media (max-width: 1024.98px) {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            @media (min-width: 768px) and (max-width: 1024.98px) {
+                font-size: 24px;
+                padding: 15px 40px;
+            }
+        }
+    }
+
+    .hero-video {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        mask-image: linear-gradient(to bottom, black 60%, transparent 100%);
+        -webkit-mask-image: linear-gradient(to bottom, black 60%, transparent 100%);
+    }
+
+    .scroll-down {
+        position: absolute;
+        right: 40px;
+        bottom: 5rem;
+        z-index: 3;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+
+        @media (max-width: 575.98px) {
+            right: 20px;
+            bottom: 2rem;
+        }
+
+        span {
+            font-size: 14px;
+            writing-mode: sideways-lr;
+            text-transform: capitalize;
+            letter-spacing: 1px;
+        }
+
+        .line-wrap {
+            width: 4px;
+            height: 130px;
+            background-color: #EFEFEF;
+            border-radius: 100rem;
+            position: relative;
+
+            &::after {
+                content: '';
+                position: absolute;
+                bottom: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 4px;
+                height: 100%;
+                background: #29A86F;
+                animation: scrollLine 1.5s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+            }
+        }
+    }
+}
+
+// 動畫部分保持不變
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translate(-100px, -100px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0, 0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translate(100px, -100px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0, 0);
+    }
+}
+
+@keyframes moveInA {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes scrollLine {
+    0% {
+        transform: translateX(-50%) scale(1, 0);
+        transform-origin: 0 0;
+    }
+
+    50% {
+        transform: translateX(-50%) scale(1, 1);
+        transform-origin: 0 0;
+    }
+
+    50.1% {
+        transform: translateX(-50%) scale(1, 1);
+        transform-origin: 0 100%;
+    }
+
+    100% {
+        transform: translateX(-50%) scale(1, 0);
+        transform-origin: 0 100%;
     }
 }
