--- a/src/components/HeroSection/index.module.scss
+++ b/src/components/HeroSection/index.module.scss
@@ -334,9 +334,16 @@ $breakpoints: ('jumbo': 1600px,
     'sm': 576px,
     'xs': 414px);
 
+@supports (height: 100svh) {
+  .hero-section {
+    min-height: 100svh;
+  }
+}
+
 .hero-section {
     width: 100%;
-    height: 100vh;
+    height: calc(var(--real-vh) * 100);
+    height: auto;
     position: relative;
     overflow: hidden;
 
