--- a/src/components/FAQSection/index.module.scss
+++ b/src/components/FAQSection/index.module.scss
@@ -52,7 +52,8 @@
 .faqCategories {
     display: flex;
     flex-direction: column;
-    width: 414px;
+    // width: 414px;
+    width: auto;
     gap: 10px;
     border-radius: 30px;
     background: var(--main-green, #29A86F);
