--- a/src/components/FloatingButtons/index.module.scss
+++ b/src/components/FloatingButtons/index.module.scss
@@ -5,11 +5,9 @@
     bottom: 138px;
     right: 40px;
     z-index: 100;
-
     display: flex;
     flex-direction: column;
     gap: 12px;
-
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s ease-out;
@@ -41,7 +39,12 @@
         box-shadow: 0 0 10px 0 rgba(31, 31, 31, 0.12);
     }
     a {
+        display: none;
         background: #FFF100;
+
+        @include xxs() {
+            display: flex;
+        }
     }
 
     button {
